<resources>
    <string name="app_name">WizMessenger</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_second_name">Enter your Second name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="registration">Registration</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset password</string>
    <string name="type_your_message">Type your message</string>
    <string name="reset_link_sent">Reset link sent</string>
    <string name="age">Enter your age</string>
</resources>